welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=0) { setCouleurBrosse(gris) ;}
    ^Runner:4: error: not found: value gris
if(x=0) { setCouleurBrosse(gris) ;}
                           ^Runner:5: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=1) {setCouleurBrosse(blue);}
    ^Runner:5: error: not found: value blue
if(x=1) {setCouleurBrosse(blue);}
                          ^Runner:6: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=2) {setCouleurBrosse(cyan);}
    ^Runner:6: error: not found: value cyan
if(x=2) {setCouleurBrosse(cyan);}
                          ^Runner:7: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=3) {setCouleurBrosse(green);}
    ^Runner:7: error: not found: value green
if(x=3) {setCouleurBrosse(green);}
                          ^Runner:8: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=4) {setCouleurBrosse(yellow);}
    ^Runner:8: error: not found: value yellow
if(x=4) {setCouleurBrosse(yellow);}
                          ^Runner:9: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=5) {setCouleurBrosse(orange);}
    ^Runner:9: error: not found: value orange
if(x=5) {setCouleurBrosse(orange);}
                          ^Runner:10: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=6) {setCouleurBrosse(red);}
    ^Runner:10: error: not found: value red
if(x=6) {setCouleurBrosse(red);}
                          ^Runner:11: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=7) {setCouleurBrosse(magenta);}
    ^Runner:11: error: not found: value magenta
if(x=7) {setCouleurBrosse(magenta);}
                          ^Runner:12: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=8) {setCouleurBrosse(pink);}
    ^Runner:12: error: not found: value pink
if(x=8) {setCouleurBrosse(pink);}
                          ^