welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var x:Int=0
while(!estFaceMur) { avance(); baisseBrosse();
if(estFaceMur) {x=x+1;gauche();avance();leveBrosse();droite();avance();baisseBrosse(); 
if(x=0) { setCouleurBrosse(gris) ;}
if(x=1) {setCouleurBrosse(blue);}
if(x=2) {setCouleurBrosse(cyan);}
if(x=3) {setCouleurBrosse(green);}
if(x=4) {setCouleurBrosse(yellow);}
if(x=5) {setCouleurBrosse(orange);}
if(x=6) {setCouleurBrosse(red);}
if(x=7) {setCouleurBrosse(magenta);}
if(x=8) {setCouleurBrosse(pink);}
}
}
